add method check_number_of_matches() to evaluate the number of matching letters if the inputs are not anagrams or antigrams

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,5 @@
 <h1>Anagrams Checker</h1>
+<h3>Check if two phrases are anagrams (contain the same letters but in a different order), palindromes (the same if one is spelled forwards and the other backwards), or antigrams (have no letters in common).
 <h2>Enter the phrases you would like to evaluate below:</h2>
 <form action='/result'>
   <div class='form-group'>
